<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gotadinero"
    tools:context="com.example.user.gotaagota.vistas.registrar_deuda"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editext">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/icons"
                android:hint="@string/cedula"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editext">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/v_prestamo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/icons"
                android:hint="@string/valor_prestamo" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editext">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/cuotas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/icons"
                android:hint="@string/cuotas" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dias"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/icons"/>
            <RadioButton
                android:id="@+id/d1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunes"
                android:textColor="@color/icons"
                android:textSize="15sp"
                android:onClick="rbutom"
                android:buttonTint="@color/icons"/>
            <RadioButton
                android:onClick="rbutom"
                android:id="@+id/d2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/martes"
                android:textColor="@color/icons"
                android:textSize="15sp"
                android:buttonTint="@color/icons"/>
            <RadioButton
                android:onClick="rbutom"
                android:id="@+id/d3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miercoles"
                android:textColor="@color/icons"
                android:textSize="15sp"
                android:buttonTint="@color/icons"/>
            <RadioButton
                android:onClick="rbutom"
                android:id="@+id/d4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jueves"
                android:textColor="@color/icons"
                android:textSize="15sp"
                android:buttonTint="@color/icons"/>
            <RadioButton
                android:onClick="rbutom"
                android:id="@+id/d5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viernes"
                android:textColor="@color/icons"
                android:textSize="15sp"
                android:buttonTint="@color/icons"/>
            <RadioButton
                android:onClick="rbutom"
                android:id="@+id/d6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sabado"
                android:textColor="@color/icons"
                android:textSize="15sp"
                android:buttonTint="@color/icons"/>
            <RadioButton
                android:onClick="rbutom"
                android:id="@+id/d7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domingo"
                android:textColor="@color/icons"
                android:textSize="15sp"
                android:buttonTint="@color/icons"/>
            <RadioButton
                android:onClick="rbutom"
                android:id="@+id/dd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todos"
                android:textColor="@color/icons"
                android:textSize="15sp"
                android:buttonTint="@color/icons"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/porcentaje"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/icons"/>
            <RadioGroup
                android:id="@+id/grupop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5%"
                    android:textColor="@color/icons"
                    android:textSize="20sp"
                    android:buttonTint="@color/icons"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10%"
                    android:textColor="@color/icons"
                    android:textSize="20sp"
                    android:buttonTint="@color/icons"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15%"
                    android:textColor="@color/icons"
                    android:textSize="20sp"
                    android:buttonTint="@color/icons"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20%"
                    android:textColor="@color/icons"
                    android:textSize="20sp"
                    android:buttonTint="@color/icons"/>
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/boton"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:onClick="guardar"
            android:theme="@style/RaisedButtonDark"/>
    </LinearLayout>

</LinearLayout>
